[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/Mob.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/prefabs/prop/shots/LittleFriend.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sprites/tortoise/cammina1.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/tortoise/cammina2.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/tortoise/idle.png" type="Texture" id=5]
[ext_resource path="res://scenes/corps/TortoiseCorpse.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/MobIA/Tortoise.gd" type="Script" id=7]
[ext_resource path="res://assets/sprites/tortoise/TortoiseIcon.png" type="Texture" id=8]
[ext_resource path="res://src/utility/Hitbox.gd" type="Script" id=11]
[ext_resource path="res://src/utility/TriggerAttack.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 76.896, 39.8492 )

[sub_resource type="RayShape2D" id=2]
length = 800.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 83.3938, 43.713 )

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform vec4 flash_color: hint_color = vec4(1.0);
uniform float flash_modifier: hint_range(0.0, 1.0) = 0.0;

void fragment() {
	vec4 color = texture(TEXTURE,UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 73.2186

[sub_resource type="CapsuleShape2D" id=6]
radius = 16.6954
height = 28.8621

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 12, 42.5 )

[node name="Tortoise" instance=ExtResource( 1 )]
script = ExtResource( 7 )
CORPSE = ExtResource( 6 )
max_hp = 5
speed = 1000
icon = ExtResource( 8 )
shot_direction = Vector2( -1, 2 )

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( 5.98878, -61.0493 )
shape = SubResource( 1 )

[node name="TriggerAttack" type="Area2D" parent="." index="1"]
position = Vector2( -112.634, -210.308 )
rotation = 1.5708
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="Raycast" type="CollisionShape2D" parent="TriggerAttack" index="0"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyChecker" index="0"]
position = Vector2( 4.83035, -61.8575 )
shape = SubResource( 3 )

[node name="AnimatedSprite" parent="." index="3"]
material = SubResource( 8 )
position = Vector2( 7, -129 )
scale = Vector2( 0.45, 0.45 )
frames = SubResource( 4 )
animation = "walk"
frame = 1
playing = true

[node name="Cooldown" parent="." index="4"]
wait_time = 20.0

[node name="HitBox" type="Area2D" parent="." index="5" groups=["Character", "Hitbox", "Mob"]]
script = ExtResource( 11 )

[node name="Body" type="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 1.70722, -94.3368 )
shape = SubResource( 5 )

[node name="Head" type="CollisionShape2D" parent="HitBox" index="1"]
position = Vector2( -84.4459, -208.515 )
rotation = 0.469494
shape = SubResource( 6 )

[node name="Neck" type="CollisionShape2D" parent="HitBox" index="2"]
position = Vector2( -85, -137.5 )
shape = SubResource( 9 )

[node name="InvincibilityTimer" parent="." index="6"]
wait_time = 0.6

[node name="Shadow" parent="." index="7"]
position = Vector2( -2.3811, -27.3826 )
scale = Vector2( 0.525591, 0.533342 )

[node name="LittleFriend" parent="." index="8" instance=ExtResource( 2 )]
position = Vector2( 10, -185 )
bounces = 3

[node name="launch_point" type="Position2D" parent="." index="9"]
position = Vector2( 0, 22.6923 )

[connection signal="area_entered" from="TriggerAttack" to="TriggerAttack" method="_on_TriggerAttack_body_entered"]
[connection signal="body_entered" from="TriggerAttack" to="TriggerAttack" method="_on_TriggerAttack_body_entered"]
[connection signal="enemy_spotted" from="TriggerAttack" to="." method="_on_TriggerAttack"]
